# CustomHook

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clean_all.sh  installer.iss
hookmaker/: CMakeLists.txt  hookmaker.cpp  hookmaker_res.rc  resource.h
hookmaker/lang/: en_US.rc  ja_JP.rc
injector/: CMakeLists.txt  injector.cpp  injector_res.rc  resource.h
injector/lang/: en_US.rc  ja_JP.rc
payload/: CMakeLists.txt  hookbody.h  hookbody.hpp  payload.c  payload.cpp  trace.h  trace.hpp  win32.h
payload/mzcrt/: mzstr.h  mzwchar.h
